# AMLInspector

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
config/: feature_build.json
data/processed/: account_daily_features.parquet
docker/: Dockerfile.feast  Dockerfile.mlflow  bootstrap_feast_parquets.py  docker-compose.yml  ensure_feast_postgres_databases.py  feast-entrypoint.sh  init-databases.sh
docs/TODO/: TODO_experimentation.md  TODO_feature.md
docs/specs/: data_model_spec.md
feast_repo/: data_sources.py  entities.py  feature_store.docker.yaml  feature_store.yaml  feature_views.py
notebooks/: 01_eda_ibm_aml.ipynb  02_feast_offline_retrieval.ipynb  02_raw_csv_bank_summary.ipynb
src/aml_inspector/: __init__.py  config.py
src/aml_inspector/cli/: __init__.py  bank_ids.py
src/aml_inspector/data/: column_contract.py  datasets.py  kaggle_download.py  preprocess_home_bank.py
src/aml_inspector/features/: __init__.py  build_tables.py  feature_build_config.py  materialize.py
src/aml_inspector/modeling/: __init__.py  artifacts.py  config.py  data.py  evaluate.py  features.py  metrics.py  plots.py  policy.py  predict.py  runner.py  splits.py  thresholds.py  train.py
src/aml_inspector/pipelines/: __init__.py  build_feature_data.py
tests/: test_build_feature_data.py  test_cli_bank_ids.py  test_column_contract.py  test_feature_build_config.py  test_modeling.py  test_preprocess_home_bank.py  test_smoke_imports.py
