[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-inspector"
version = "0.1.0"
description = "AML detection models with Feast features and MLflow tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feast>=0.40.0",
    "mlflow>=2.14.0",
    "networkx>=3.2.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary,pool]>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
